modify properties file

--- a/kadai_002/nagoyameshi/src/main/resources/application-production.properties
+++ b/kadai_002/nagoyameshi/src/main/resources/application-production.properties
@@ -20,3 +20,13 @@ stripe.success-url=${STRIPE_SUCCESS_URL}
 stripe.cancel-url=${STRIPE_CANCEL_URL}
 stripe.webhook-secret=${STRIPE_WEBHOOK_SECRET}
 stripe.premium-plan-price-id=${STRIPE_PREMIUM_PLAN_PRICE_ID}
+
+server.servlet.session.cookie.secure=true
+server.servlet.session.cookie.same-site=none
+
+server.forward-headers-strategy=framework
+server.tomcat.remote-ip-header=x-forwarded-for
+server.tomcat.protocol-header=x-forwarded-proto
+
+server.tomcat.max-part-count=20
+
